[package]
name = "tide"
version = "0.1.0"
authors = ["Nolan Holden <nolanholden@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ip-address-player-ids = []

default = []

[dependencies]
serde_json = "1.0"
env_logger = "0.7.1"
ws = "0.9.1"
serde = { version = "1.0.105", features = ["derive"] }
nalgebra = { version = "0.20.0", features = ["serde-serialize"] }
ncollide2d = "0.22"
approx = "0.3.2"
log = "0.4.8"
mio-extras = "2.0.6"
lazy_static = "1.4.0"
specs = { version = "0.16.1", features = ["specs-derive"] }
crossbeam-channel = "0.4.2"
